--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,7 +7,9 @@
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
-
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
