chore: style update

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_APP_ID=kp7595593cfcbf4af38d381570001225
 VITE_MERCHANT_CODE=20240422
-VITE_API_URL=http://localhost:3000/api
+VITE_API_URL=https://mvwmblv3-9000.inc1.devtunnels.ms/api
